# rust-discord-bot

./: Cargo.toml  README.md  Secrets.toml.example
src/: config.rs  main.rs
src/commands/: mod.rs  slap.rs
