[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
ureq = { version = "2.9.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.113"
poise = "0.6.1"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.39.0"
tracing = "0.1.37"
tokio = "1.26.0"
